--- a/PRACTICE/style.css
+++ b/PRACTICE/style.css
@@ -23,7 +23,7 @@
 }
  
  
-boby{
+.main{
     margin: 0;
     padding: 0;
     font-family: sans-serif;
@@ -80,3 +80,18 @@ section .content p
     margin: 10px;
     box-sizing: border-box;
 } 
+body{
+    margin: 0;
+    padding: 0;
+    background-image: url(images/6.jpg);
+    background-repeat: no-repeat;
+    background-size:  100%;
+}
+ 
+.center{
+    border: 3px solid black;
+    color: #fff;
+    box-sizing: border-box;
+    margin-top:180px ;
+    text-align: center;
+}
